--- a/framework/assets/css/themeblvd.css
+++ b/framework/assets/css/themeblvd.css
@@ -7309,6 +7309,7 @@ blockquote small {
 }
 .tb-floating-search .search-wrap:before {
 	content: "\f002";
+	display: block;
 	font-family: "FontAwesome";
 	font-size: 18px;
 	line-height: 1.3em;
@@ -7319,6 +7320,8 @@ blockquote small {
 	text-rendering: auto;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	text-align: center;
+	width: 1em;
 }
 .tb-floating-search.full .search-wrap:before {
 	font-size: 22px;
